--- a/css/profile.css
+++ b/css/profile.css
@@ -1,3 +1,88 @@
+/*Profile Events */
+#profile_events {
+ 
+}
+
+#profile_events .hotel {
+  /*border: 1px solid #e0e5fa;*/
+  /*background: #fff;*/
+  /*margin-bottom: 30px;*/
+}
+
+#profile_events .hotel:hover .hotel-img img {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+}
+
+#profile_events .hotel-img {
+  overflow: hidden;
+  margin-bottom: 15px;
+}
+
+#profile_events .hotel-img img {
+  transition: 0.3s ease-in-out;
+}
+
+#profile_events h3 {
+  font-weight: 600;
+  font-size: 20px;
+  margin-bottom: 5px;
+  padding: 0 20px;
+}
+
+#profile_events a {
+  color: #f82249;
+}
+
+#profile_events a:hover {
+  color: #152b79;
+}
+
+#profile_events .stars {
+  padding: 0 20px;
+  margin-bottom: 5px;
+}
+
+#profile_events p {
+  padding: 0 20px;
+  margin-bottom: 20px;
+  color: #060c22;
+  font-style: italic;
+  font-size: 15px;
+}
+
+
+
+
+
+
+/*Profile Section*/
+#profile_inno {
+  width: 100%;
+  background: url(../img/intro-bg.jpg) top center;
+  background-size: cover;
+  overflow: hidden;
+  position: relative;
+}
+
+#profile_inno:before {
+  content: "";
+  background: rgba(6, 12, 34, 0.8);
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+#profile_inno h1 {
+  color: #fff;
+  font-family: "Raleway", sans-serif;
+  font-size: 56px;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+
 
 #profile_inno .about-btn {
   font-family: "Raleway", sans-serif;
