category events- list

--- a/views/eventsSection.html
+++ b/views/eventsSection.html
@@ -57,7 +57,7 @@
 
                         <a class="dropbtn">Events</a>
                         <div class="dropdown-content">
-                            <a href="#Tech-Events">Tech Events</a>
+                            <a href="#events">Events</a>
                             <a href="#Fun-Events">Fun Events</a>
                             <a href="#Workshops">Workshops</a>
                             <a href="#Exhibitions">Exhibitions</a>
@@ -351,50 +351,19 @@
                     <p>Here are some of our speakers</p>
                 </div>
 
+                  <h3>Events</h3>
+                <div id="events">
+                    <!-- <div class="row"> -->
 
-                <div id="Tech-Events">
-
-                    <h3>Tech Events</h3>
-
-                    <div class="row">
-
-                        <div class="col-lg-4 col-md-6">
+                        <!-- <div class="col-lg-4 col-md-6"> -->
+                           <!--  <a href="event-details.html">
                             <div class="speaker">
-                                <a href="event-details.html"><img src="../assets/images/speakers/1.jpg" alt="Speaker 1" class="img-fluid"></a>
-                            </div>
-                        </div>
+                                <img src="../assets/images/speakers/1.jpg" alt="Speaker 1" class="img-fluid">
+                            </div> 
+                            </a> -->
+                        <!-- </div> -->
 
-                        <div class="col-lg-4 col-md-6">
-                            <div class="speaker">
-                                <a href="event-details.html"><img src="../assets/images/speakers/2.jpg" alt="Speaker 2" class="img-fluid"></a>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6">
-                            <div class="speaker">
-                                <a href="event-details.html"><img src="../assets/images/speakers/3.jpg" alt="Speaker 3" class="img-fluid"></a>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6">
-                            <div class="speaker">
-                                <a href="event-details.html"><img src="../assets/images/speakers/4.jpg" alt="Speaker 4" class="img-fluid"></a>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6">
-                            <div class="speaker">
-                                <a href="event-details.html"><img src="../assets/images/speakers/5.jpg" alt="Speaker 5" class="img-fluid"></a>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6">
-                            <div class="speaker">
-                                <a href="event-details.html"><img src="../assets/images/speakers/6.jpg" alt="Speaker 6" class="img-fluid"></a>
-                            </div>
-                        </div>
-
-                    </div>
+                    <!-- </div> -->
                 </div>
 
                 <div id="Fun-Events">
@@ -442,7 +411,7 @@
                     </div>
                 </div>
 
-                <div id="Workshops">
+                <div id="Wporkshops">
 
                     <h3>Workshops</h3>
 
@@ -487,7 +456,7 @@
                     </div>
                 </div>
 
-                <div id="Exhibitions">
+                <div id="Exhib itions">
 
                     <h3>Exhibitions</h3>
 
@@ -635,6 +604,7 @@
 
     <!-- Template Main Javascript File -->
     <script src="../assets/js/main.js"></script>
+    <script src="../assets/js/ajax/eventFinal.js"></script>
 </body>
 
 </html>
