CRUD for admin events done

--- a/views/event/admin/index.html
+++ b/views/event/admin/index.html
@@ -56,16 +56,17 @@
             console.log($("#pwd").val());
             $.ajax({
                 type: "POST",
-                url: "../apis/panels/cms/login.php",
+                url: "../../../apis/panels/cms/login.php",
                 data: {
                     username: $("#id").val().toString(),
                     password: $("#pwd").val().toString()
                 },
                 success: function(data) {
+                    console.log(data);
                     var dataSet = JSON.parse(data);
                     if (dataSet["status"].localeCompare("success") == 0) {
                         localStorage.cms_token = dataSet["result"];
-                        window.location.assign("./cms_events.html");
+                        window.location.assign("./manage_events.html");
                     } else {
                         alert(dataSet["result"]);
                     }
