updated events table and minor changes events CRUD

--- a/views/event/admin/manage_events.html
+++ b/views/event/admin/manage_events.html
@@ -55,71 +55,72 @@
                 <div class="modal-body">
                     <div class="form-group">
                         <label for="event_name"> Event Name</label>
-                        <input type="text" class="title" name="title" class="form-control">
+                        <input type="text" id="title" name="title" class="form-control">
                     </div>
                     <div class="form-group">
                         <label for="message-text" class="col-form-label">Description:</label>
-                        <textarea class="form-control" value="" class="desc" name="description"></textarea>
+                        <textarea class="form-control" value="" id="desc" name="description"></textarea>
                     </div>
                     <div class="form-group">
                         <label for="message-text" class="col-form-label">Event Rules:</label>
-                        <textarea class="form-control" value="" class="rules" name="rules"></textarea>
+                        <textarea class="form-control" value="" id="rules" name="rules"></textarea>
                     </div>
                     <div class="form-group">
                         <label for="message-text" class="col-form-label">Judging Criteria:</label>
-                        <textarea class="form-control" value="" class="jc" name="judging_criteria"></textarea>
+                        <textarea class="form-control" value="" id="jc" name="judging_criteria"></textarea>
                     </div>
                     <div class="form-group">
                         <label for="date">Date1:</label><br>
-                        <input type="date" class="date" name="date" value="">
+                        <input type="date" id="date" name="date" value="">
                     </div>
                     <div class="form-group">
-                        <label for="date1">Date2:</label><br input type="date" class="date1" name="date1">
+                        <label for="date1">Date2:</label><br>
+                        <input type="date" id="date1" name="date1">
                     </div>
                     <div class="form-group">
                         <label for="time">Time1</label>
-                        <input type="time" class="time" value="" class="form-control" name="time">
+                        <input type="time" id="time" value="" class="form-control" name="time">
                     </div>
                     <div class="form-group">
                         <label for="time">Time2</label>
-                        <input type="time" class="time1" class="form-control" name="time1">
+                        <input type="time" id="time1" class="form-control" name="time1">
                     </div>
                     <div class="form-group">
                         <label for="venue">Venue</label>
-                        <input type="text" class="venue" class="form-control" name="venue">
+                        <input type="text" id="venue" class="form-control" name="venue">
                     </div>
                     <div class="form-group">
                         <label for="category">Category</label>
-                        <input type="text" class="category" class="form-control" name="category">
+                        <input type="text" id="category" class="form-control" name="category">
                     </div>
                     <div class="form-group">
-                        <input type="file" name="" class="fileToUpload">
+                        <input type="file" name="" id="fileToUpload">
                     </div>
                     <h4>Coordinator one</h4>
                     <div class="form-group">
                         <label for="full_name_1">Full Name</label>
-                        <input type="text" class="full_name_1" class="form-control" name="coordinatorName1">
+                        <input type="text" id="full_name_1" class="form-control" name="coordinatorName1">
                     </div>
                     <div class="form-group">
                         <label for="contact_1">Contact</label>
-                        <input type="tel" class="contact_1" class="form-control" name="coordinatorContact1">
+                        <input type="tel" id="contact_1" class="form-control" name="coordinatorContact1">
                     </div>
                     <h4>Coordinator two</h4>
                     <div class="form-group">
                         <label for="full_name_2">Full Name</label>
-                        <input type="text" class="full_name_2" class="form-control" name="coordinatorName2">
+                        <input type="text" id="full_name_2" class="form-control" name="coordinatorName2">
                     </div>
                     <div class="form-group">
                         <label for="contact_2">Contact</label>
-                        <input type="tel" class="contact_2" class="form-control" name="coordinatorContact2">
+                        <input type="tel" id="contact_2" class="form-control" name="coordinatorContact2">
                     </div>
                     <div class="form-group">
                         <label for="LoginID">Login ID</label>
-                        <input type="text" class="loginId" name="loginId" class="form-control">
+                        <input type="text" id="loginId" name="loginId" class="form-control">
                     </div>
                     <div class="form-group">
                         <label for="login_password">Login Password</label>
-                        <input type="text" class="loginPassword" name="loginPassword" class="form-control">
+                        <input type="text" id="loginPassword" name="loginPassword" class="form-control">
                     </div>
                 </div>
                 <div class="modal-footer">
