--- a/views/profile.html
+++ b/views/profile.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>TheEvent - Bootstrap Event Template</title>
+    <title>Profile page</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -126,7 +126,7 @@
                                 <img src="../assets/images/hotels/1.jpg" alt="Events 1" class="img-fluid">
                             </div>
                             <h3 "><a href="# " >Events 1</a></h3>
-  
+
             </div>
           </div>
 
@@ -136,7 +136,7 @@
                 <img src="../assets/images/hotels/2.jpg " alt="Events 2 " class="img-fluid ">
               </div>
               <h3><a href="# ">Events 2</a></h3>
-             
+
             </div>
           </div>
 
@@ -146,7 +146,7 @@
                 <img src="../assets/images/hotels/3.jpg " alt="Events 3 " class="img-fluid ">
               </div>
               <h3><a href="# ">Events 3</a></h3>
-             
+
             </div>
           </div>
 
@@ -156,7 +156,7 @@
                 <img src="../assets/images/hotels/3.jpg " alt="Events 4 " class="img-fluid ">
               </div>
               <h3><a href="# ">Events 4</a></h3>
-             
+
             </div>
           </div>
 
