--- a/views/event-details.html
+++ b/views/event-details.html
@@ -235,6 +235,7 @@
 
     <!-- Template Main Javascript File -->
     <script src="../assets/js/main.js"></script>
+    <script src="../assets/js/ajax/event_individual.js"></script>
 </body>
 
 </html>
