--- a/views/eventsSection.html
+++ b/views/eventsSection.html
@@ -351,6 +351,12 @@
                     <p>Here are some of our speakers</p>
                 </div>
 
+            <h3>Flagships</h3>
+
+                <div id="flagships">
+                </div>
+
+
                   <h3>Events</h3>
                 <div id="events">
                     <!-- <div class="row"> -->
@@ -365,145 +371,35 @@
 
                     <!-- </div> -->
                 </div>
+ 
 
-                <div id="Fun-Events">
+            <h3>Workshops</h3>
 
-                    <h3>Fun Events</h3>
+                <div id="workshops">
 
-                    <div class="row">
-
-                        <div class="col-lg-4 col-md-6">
-                            <div class="speaker">
-                                <a href="event-details.html"><img src="../assets/images/speakers/1.jpg" alt="Speaker 1" class="img-fluid"></a>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6">
-                            <div class="speaker">
-                                <a href="event-details.html"><img src="../assets/images/speakers/2.jpg" alt="Speaker 2" class="img-fluid"></a>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6">
-                            <div class="speaker">
-                                <a href="event-details.html"><img src="../assets/images/speakers/3.jpg" alt="Speaker 3" class="img-fluid"></a>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6">
-                            <div class="speaker">
-                                <a href="event-details.html"><img src="../assets/images/speakers/4.jpg" alt="Speaker 4" class="img-fluid"></a>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6">
-                            <div class="speaker">
-                                <a href="event-details.html"><img src="../assets/images/speakers/5.jpg" alt="Speaker 5" class="img-fluid"></a>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6">
-                            <div class="speaker">
-                                <a href="event-details.html"><img src="../assets/images/speakers/6.jpg" alt="Speaker 6" class="img-fluid"></a>
-                            </div>
-                        </div>
-
-                    </div>
                 </div>
 
-                <div id="Wporkshops">
+            <h3>Workshops(Paid) </h3>
 
-                    <h3>Workshops</h3>
+                <div id="paidworkshops">
 
-                    <div class="row">
-
-                        <div class="col-lg-4 col-md-6">
-                            <div class="speaker">
-                                <a href="event-details.html"><img src="../assets/images/speakers/1.jpg" alt="Speaker 1" class="img-fluid"></a>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6">
-                            <div class="speaker">
-                                <a href="event-details.html"><img src="../assets/images/speakers/2.jpg" alt="Speaker 2" class="img-fluid"></a>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6">
-                            <div class="speaker">
-                                <a href="event-details.html"><img src="../assets/images/speakers/3.jpg" alt="Speaker 3" class="img-fluid"></a>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6">
-                            <div class="speaker">
-                                <a href="event-details.html"><img src="../assets/images/speakers/4.jpg" alt="Speaker 4" class="img-fluid"></a>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6">
-                            <div class="speaker">
-                                <a href="event-details.html"><img src="../assets/images/speakers/5.jpg" alt="Speaker 5" class="img-fluid"></a>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6">
-                            <div class="speaker">
-                                <a href="event-details.html"><img src="../assets/images/speakers/6.jpg" alt="Speaker 6" class="img-fluid"></a>
-                            </div>
-                        </div>
-
-                    </div>
                 </div>
+           
+                                
 
-                <div id="Exhib itions">
+            <h3>Exhibitions</h3>
+                
+                <div id="exhibitions">
 
-                    <h3>Exhibitions</h3>
-
-                    <div class="row">
-
-                        <div class="col-lg-4 col-md-6">
-                            <div class="speaker">
-                                <a href="event-details.html"><img src="../assets/images/speakers/1.jpg" alt="Speaker 1" class="img-fluid"></a>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6">
-                            <div class="speaker">
-                                <a href="event-details.html"><img src="../assets/images/speakers/2.jpg" alt="Speaker 2" class="img-fluid"></a>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6">
-                            <div class="speaker">
-                                <a href="event-details.html"><img src="../assets/images/speakers/3.jpg" alt="Speaker 3" class="img-fluid"></a>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6">
-                            <div class="speaker">
-                                <a href="event-details.html"><img src="../assets/images/speakers/4.jpg" alt="Speaker 4" class="img-fluid"></a>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6">
-                            <div class="speaker">
-                                <a href="event-details.html"><img src="../assets/images/speakers/5.jpg" alt="Speaker 5" class="img-fluid"></a>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6">
-                            <div class="speaker">
-                                <a href="event-details.html"><img src="../assets/images/speakers/6.jpg" alt="Speaker 6" class="img-fluid"></a>
-                            </div>
-                        </div>
-
-                    </div>
                 </div>
+            
+              <h3>Cultural</h3>
+                
+                <div id="cultural">
 
+                </div>
+                
             </div>
-
-
 
         </section>
 
