--- a/views/eventsSection.html
+++ b/views/eventsSection.html
@@ -57,10 +57,13 @@
 
                         <a class="dropbtn">Events</a>
                         <div class="dropdown-content">
+                            <a href="#flagships">Flagship Events</a>
                             <a href="#events">Events</a>
-                            <a href="#Fun-Events">Fun Events</a>
-                            <a href="#Workshops">Workshops</a>
-                            <a href="#Exhibitions">Exhibitions</a>
+                            <a href="#workshops">Workshops</a>
+                            <a href="#paidworkshops">Workshops (Paid)</a>
+                            <a href="#exhibitions">Exhibitions</a>
+                            <a href="#cultural">Cultural </a>
+
                         </div>
 
                     </li>
