initated working on event coordinator

--- a/views/event/coordinator/admin_panel.html
+++ b/views/event/coordinator/admin_panel.html
@@ -5,7 +5,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <!-- <link rel="stylesheet" href="stylesheets/style.css"> -->
     <script src="../../../assets/lib/jquery/jquery.min.js"></script>
-    <script src="../../../assets/js/sweetalert.min.js"></script>
 </head>
 
 <body style="background-color: #FBC02D;padding: 2em;">
@@ -184,9 +183,10 @@
         });
     </script>
 
-    <script src="../js/ajax/update_event_winners.js"></script>
-    <script src="../js/ajax/displayParticipants.js"></script>
-    <script src="../js/ajax/checkedInList.js"></script>
+    <script src="../../../assets/js/ajax/update_event_winners.js"></script>
+    <script src="../../../assets/lib/sweetalert/sweetalert.js"></script>
+    <script src="../../../assets/js/ajax/displayParticipants.js"></script>
+    <script src="../../../assets/js/ajax/checkedInList.js"></script>
 
 </body>
 
