--- a/views/event-details.html
+++ b/views/event-details.html
@@ -37,47 +37,47 @@
 
 <body>
 
-    <!--==========================
-    Header
-  ============================-->
-    <header id="header">
-        <div class="container">
+  <!--==========================
+  Header
+============================-->
+  <header id="header">
+      <div class="container">
 
-            <div id="logo" class="pull-left">
-                <!-- Uncomment below if you prefer to use a text logo -->
-                <a href="#intro" class="scrollto"><img src="../assets/images/Innovision_Logo.png" alt="" title="Innovision'19"></a>
-                <!-- <h1><a href="#main"><span>Inno'19</span></a></h1> -->
-            </div>
+          <div id="logo" class="pull-left">
+              <!-- Uncomment below if you prefer to use a text logo -->
+              <a href="#intro" class="scrollto"><img src="../assets/images/Innovision_Logo.png" alt="" title="Innovision'19"></a>
+              <!-- <h1><a href="#main"><span>Inno'19</span></a></h1> -->
+          </div>
 
-            <nav id="nav-menu-container">
-                <ul class="nav-menu">
-                    <li><a href="#intro">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li class="dropdown menu-active">
+          <nav id="nav-menu-container">
+              <ul class="nav-menu">
+                  <li><a href="#intro">Home</a></li>
+                  <li><a href="#about">About</a></li>
+                  <li class="dropdown menu-active">
 
-                        <a class="dropbtn">Events</a>
-                        <div class="dropdown-content">
-                            <a href="eventsSection.html#EventsSection">Event Schedule</a>
-                            <a href="eventsSection.html#Tech-Events">Tech Events</a>
-                            <a href="eventsSection.html#Fun-Events">Fun Events</a>
-                            <a href="eventsSection.html#Workshops">Workshops</a>
-                            <a href="eventsSection.html#Exhibitions">Exhibitions</a>
-                        </div>
+                      <a class="dropbtn">Events</a>
+                      <div class="dropdown-content">
+                          <a href="eventsSection.html#EventsSection">Event Schedule</a>
+                          <a href="eventsSection.html#Events">Events</a>
+                          <a href="eventsSection.html#Workshops">Workshops</a>
+                          <a href="eventsSection.html#Paid-Workshops">Paid-Workshops</a>
+                          <a href="eventsSection.html#Cultural">Cultural</a>
+                      </div>
 
-                    </li>
-                    <!-- <li><a href="#schedule">Schedule</a></li>
-          <li><a href="#venue">Venue</a></li>
-          <li><a href="#hotels">Hotels</a></li> -->
-                    <li><a href="#gallery">Gallery</a></li>
-                    <li><a href="#supporters">Sponsors</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                    <li class="buy-tickets"><a href="#buy-tickets">Buy Tickets</a></li>
-                </ul>
-            </nav>
-            <!-- #nav-menu-container -->
-        </div>
-    </header>
-    <!-- #header -->
+                  </li>
+                  <li><a href="ISRpage.html">Innovision Social Regime</a></li>
+                  <li><a href="FAQ.html">FAQ</a></li>
+                  <!-- <li><a href="#hotels">Hotels</a></li>
+                  <li><a href="#gallery">Gallery</a></li> -->
+                  <li><a href="sponsor.html">Sponsors</a></li>
+                  <li><a href="#contact">Contact</a></li>
+                  <li class="buy-tickets"><a href="login.html">Login/Register</a></li>
+              </ul>
+          </nav>
+          <!-- #nav-menu-container -->
+      </div>
+  </header>
+  <!-- #header -->
 
     <!-- <main id="main" class="main-page"> -->
 
