--- a/views/ISRpage.html
+++ b/views/ISRpage.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
-  <title>Profile page</title>
+  <title>ISR - Innovision'19</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -18,7 +18,7 @@
   <!-- Bootstrap CSS File -->
   <link href="../assets/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Libraries CSS Files -->
+  <!-- ../assets/libraries CSS Files -->
   <link href="../assets/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
   <link href="../assets/lib/animate/animate.min.css" rel="stylesheet">
   <link href="../assets/lib/venobox/venobox.css" rel="stylesheet">
@@ -26,8 +26,6 @@
 
   <!-- Main Stylesheet File -->
   <link href="../assets/css/style.css" rel="stylesheet">
-  <link href="../assets/css/profile.css" rel="stylesheet">
-
 
   <!-- =======================================================
     Theme Name: TheEvent
@@ -40,192 +38,90 @@
 <body>
 
   <!--==========================
-    Header
-  ============================-->
+  Header
+============================-->
   <header id="header">
-    <div class="container">
+      <div class="container">
 
-      <div id="logo" class="pull-left">
-        <!-- Uncomment below if you prefer to use a text logo -->
-        <a href="#intro" class="scrollto"><img src="../assets/images/Innovision_Logo.png" alt="" title="Innovision'19"></a>
-        <!-- <h1><a href="#main"><span>Inno'19</span></a></h1> -->
+          <div id="logo" class="pull-left">
+              <!-- Uncomment below if you prefer to use a text logo -->
+              <a href="#intro" class="scrollto"><img src="../assets/images/Innovision_Logo.png" alt="" title="Innovision'19"></a>
+              <!-- <h1><a href="#main"><span>Inno'19</span></a></h1> -->
+          </div>
+
+          <nav id="nav-menu-container">
+              <ul class="nav-menu">
+                  <li><a href="#intro">Home</a></li>
+                  <li><a href="#about">About</a></li>
+                  <li class="dropdown">
+
+                      <a class="dropbtn dropping">Events</a>
+                      <div class="dropdown-content">
+                          <a href="eventsSection.html#EventsSection">Event Schedule</a>
+                          <a href="eventsSection.html#Events">Events</a>
+                          <a href="eventsSection.html#Workshops">Workshops</a>
+                          <a href="eventsSection.html#Paid-Workshops">Paid-Workshops</a>
+                          <a href="eventsSection.html#Cultural">Cultural</a>
+                      </div>
+
+                  </li>
+                  <li class="menu-active"><a href="#">Innovision Social Regime</a></li>
+                  <li><a href="FAQ.html">FAQ</a></li>
+                  <!-- <li><a href="#hotels">Hotels</a></li>
+                  <li><a href="#gallery">Gallery</a></li> -->
+                  <li><a href="sponsor.html">Sponsors</a></li>
+                  <li><a href="#contact">Contact</a></li>
+                  <li class="buy-tickets"><a href="login.html">Login/Register</a></li>
+              </ul>
+          </nav>
+          <!-- #nav-menu-container -->
       </div>
-
-      <nav id="nav-menu-container">
-        <ul class="nav-menu">
-          <li><a href="#intro">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li class="dropdown">
-
-            <a class="dropbtn">Events</a>
-            <div class="dropdown-content">
-              <a href="#Events">Events</a>
-              <a href="#Workshops">Workshops</a>
-              <a href="#Paid-Workshops">Paid-Workshops</a>
-              <a href="#Cultural">Cultural</a>
-            </div>
-
-          </li>
-          <li><a href="ISRpage.html">Innovision Social Regime</a></li>
-          <li><a href="FAQ.html">FAQ</a></li>
-          <!-- <li><a href="#hotels">Hotels</a></li>
-          <li><a href="#gallery">Gallery</a></li> -->
-          <li><a href="sponsor.html">Sponsors</a></li>
-          <li><a href="#contact">Contact</a></li>
-          <li class="menu-active buy-tickets"><a href="#">Login/Register</a></li>
-        </ul>
-      </nav>
-      <!-- #nav-menu-container -->
-    </div>
   </header>
   <!-- #header -->
 
+
   <!--==========================
-    Login and Registration Section
-  ============================-->
+Venue Section
+============================-->
+  <section id="venue" class="wow fadeInUp">
 
-
-
-  <section id="profile_inno" class="section-with-bg">
-    <div class="container wow fadeInUp">
+    <div class="container-fluid venue-gallery-container">
 
       <div class="section-header">
-
-        <center>
-          <h2 style="color: white;">Profile Page</h2>
-        </center>
+        <h2>Event Venue</h2>
+        <p>Event venue location info and gallery</p>
       </div>
-      <div class="row" style="text-align: center;">
 
-        <div class="col-md-8">
-          <h3 style="color: white;">Name : Roshan S </h3>
-          <h3 style="color: white;">Email : roshan@gmail.com </h3>
-          <h3 style="color: white;">College : nitr</h3>
-          <h3 style="color: white;">Inno Id : 4356578</h3>
-          <br><br>
-          <a href="#about" class="about-btn scrollto">&nbsp;&nbsp; PAYMENT &nbsp;&nbsp;</a> <br><br>
+      <div class="row no-gutters">
+
+        <div class="col-lg-4 col-md-6">
+          <div class="venue-gallery">
+            <a href="assets/images/venue-gallery/1.jpg" class="venobox vbox-item" data-gall="venue-gallery">
+              <img src="../assets/images/venue-gallery/1.jpg" alt="" class="img-fluid">
+            </a>
+          </div>
         </div>
-        <div class="col-md-4">
-          <center>
-            <img src="../assets/images/qrcodes/40.png" style="position: relative;">
-          </center>
+
+        <div class="col-lg-4 col-md-6">
+          <div class="venue-gallery">
+            <a href="assets/images/venue-gallery/2.jpg" class="venobox" data-gall="venue-gallery">
+              <img src="../assets/images/venue-gallery/2.jpg" alt="" class="img-fluid">
+            </a>
+          </div>
         </div>
+
+        <div class="col-lg-4">
+          <div class="venue-gallery">
+            <a href="assets/images/venue-gallery/3.jpg" class="venobox" data-gall="venue-gallery">
+              <img src="../assets/images/venue-gallery/3.jpg" alt="" class="img-fluid">
+            </a>
+          </div>
+        </div>
+
       </div>
-      <br><br>
-
-      <br><br>
-
-
     </div>
 
   </section>
-
-  <section id="profile_inno" class="section-with-bg">
-    <div class="container wow fadeInUp">
-      <br>
-      <div class="section-header">
-        <h2 style="color: white; font-size: 26px;">Events Registered</h2>
-      </div>
-
-      <div class="container" id="profile_events">
-        <div class="row" style="text-align: center;">
-
-          <div class="col-lg-3 col-md-6">
-            <div class="hotel">
-              <div class="hotel-img">
-                <img src="../assets/images/hotels/1.jpg" alt="Events 1" class="img-fluid">
-              </div>
-              <h3 "><a href=" # " >Events 1</a></h3>
-
-            </div>
-          </div>
-
-          <div class=" col-lg-3 col-md-6 ">
-            <div class=" hotel ">
-              <div class=" hotel-img ">
-                <img src=" ../assets/images/hotels/2.jpg " alt=" Events 2 " class=" img-fluid ">
-              </div>
-              <h3><a href=" # ">Events 2</a></h3>
-
-            </div>
-          </div>
-
-          <div class=" col-lg-3 col-md-6 ">
-            <div class=" hotel ">
-              <div class=" hotel-img ">
-                <img src=" ../assets/images/hotels/3.jpg " alt=" Events 3 " class=" img-fluid ">
-              </div>
-              <h3><a href=" # ">Events 3</a></h3>
-
-            </div>
-          </div>
-
-                <div class=" col-lg-3 col-md-6 ">
-            <div class=" hotel ">
-              <div class=" hotel-img ">
-                <img src=" ../assets/images/hotels/3.jpg " alt=" Events 4 " class=" img-fluid ">
-              </div>
-              <h3><a href=" # ">Events 4</a></h3>
-
-            </div>
-          </div>
-
-
-        </div>
-        <br>
-        <div class=" row " style=" text-align: center; ">
-
-          <div class=" col-lg-3 col-md-6 ">
-            <div class=" hotel ">
-              <div class=" hotel-img ">
-                <img src=" ../assets/images/hotels/1.jpg " alt=" Events 1 " class=" img-fluid ">
-              </div>
-              <h3 "><a href="#">Events 1</a></h3>
-
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6">
-            <div class="hotel">
-              <div class="hotel-img">
-                <img src="../assets/images/hotels/2.jpg" alt="Events 2" class="img-fluid">
-              </div>
-              <h3><a href="#">Events 2</a></h3>
-
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6">
-            <div class="hotel">
-              <div class="hotel-img">
-                <img src="../assets/images/hotels/3.jpg" alt="Events 3" class="img-fluid">
-              </div>
-              <h3><a href="#">Events 3</a></h3>
-
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6">
-            <div class="hotel">
-              <div class="hotel-img">
-                <img src="../assets/images/hotels/3.jpg" alt="Events 4" class="img-fluid">
-              </div>
-              <h3><a href="#">Events 4</a></h3>
-
-            </div>
-          </div>
-
-
-        </div>
-
-
-      </div>
-
-
-
-    </div>
-  </section>
-
 
 
   <!--==========================
