ISR page updatd - Modals added. texts are dummy.

--- a/views/ISRpage.html
+++ b/views/ISRpage.html
@@ -41,80 +41,105 @@
   Header
 ============================-->
   <header id="header">
-      <div class="container">
+    <div class="container">
 
-          <div id="logo" class="pull-left">
-              <!-- Uncomment below if you prefer to use a text logo -->
-              <a href="#intro" class="scrollto"><img src="../assets/images/Innovision_Logo.png" alt="" title="Innovision'19"></a>
-              <!-- <h1><a href="#main"><span>Inno'19</span></a></h1> -->
-          </div>
-
-          <nav id="nav-menu-container">
-              <ul class="nav-menu">
-                  <li><a href="#intro">Home</a></li>
-                  <li><a href="#about">About</a></li>
-                  <li class="dropdown">
-
-                      <a class="dropbtn dropping">Events</a>
-                      <div class="dropdown-content">
-                          <a href="eventsSection.html#EventsSection">Event Schedule</a>
-                          <a href="eventsSection.html#Events">Events</a>
-                          <a href="eventsSection.html#Workshops">Workshops</a>
-                          <a href="eventsSection.html#Paid-Workshops">Paid-Workshops</a>
-                          <a href="eventsSection.html#Cultural">Cultural</a>
-                      </div>
-
-                  </li>
-                  <li class="menu-active"><a href="#">Innovision Social Regime</a></li>
-                  <li><a href="FAQ.html">FAQ</a></li>
-                  <!-- <li><a href="#hotels">Hotels</a></li>
-                  <li><a href="#gallery">Gallery</a></li> -->
-                  <li><a href="sponsor.html">Sponsors</a></li>
-                  <li><a href="#contact">Contact</a></li>
-                  <li class="buy-tickets"><a href="login.html">Login/Register</a></li>
-              </ul>
-          </nav>
-          <!-- #nav-menu-container -->
+      <div id="logo" class="pull-left">
+        <!-- Uncomment below if you prefer to use a text logo -->
+        <a href="#intro" class="scrollto"><img src="../assets/images/Innovision_Logo.png" alt="" title="Innovision'19"></a>
+        <!-- <h1><a href="#main"><span>Inno'19</span></a></h1> -->
       </div>
+
+      <nav id="nav-menu-container">
+        <ul class="nav-menu">
+          <li><a href="#intro">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li class="dropdown">
+
+            <a class="dropbtn dropping">Events</a>
+            <div class="dropdown-content">
+              <a href="eventsSection.html#EventsSection">Event Schedule</a>
+              <a href="eventsSection.html#Events">Events</a>
+              <a href="eventsSection.html#Workshops">Workshops</a>
+              <a href="eventsSection.html#Paid-Workshops">Paid-Workshops</a>
+              <a href="eventsSection.html#Cultural">Cultural</a>
+            </div>
+
+          </li>
+          <li class="menu-active"><a href="#">Innovision Social Regime</a></li>
+          <li><a href="FAQ.html">FAQ</a></li>
+          <!-- <li><a href="#hotels">Hotels</a></li>
+                  <li><a href="#gallery">Gallery</a></li> -->
+          <li><a href="sponsor.html">Sponsors</a></li>
+          <li><a href="#contact">Contact</a></li>
+          <li class="buy-tickets"><a href="login.html">Login/Register</a></li>
+        </ul>
+      </nav>
+      <!-- #nav-menu-container -->
+    </div>
   </header>
   <!-- #header -->
 
 
   <!--==========================
-Venue Section
+Hotels Section
 ============================-->
-  <section id="venue" class="wow fadeInUp">
+  <section id="hotels" class="section-with-bg wow fadeInUp">
 
-    <div class="container-fluid venue-gallery-container">
-
+    <div class="container">
       <div class="section-header">
-        <h2>Event Venue</h2>
-        <p>Event venue location info and gallery</p>
+        <h2>Innovision Social Regime</h2>
+        <p>Social welfare at NITR</p>
       </div>
 
-      <div class="row no-gutters">
+      <div class="row">
 
         <div class="col-lg-4 col-md-6">
-          <div class="venue-gallery">
-            <a href="assets/images/venue-gallery/1.jpg" class="venobox vbox-item" data-gall="venue-gallery">
-              <img src="../assets/images/venue-gallery/1.jpg" alt="" class="img-fluid">
-            </a>
+          <div class="hotel">
+            <div class="hotel-img" data-toggle="modal" data-target="#kerala">
+              <img src="../assets/images/hotels/1.jpg" alt="Hotel 1" class="img-fluid">
+            </div>
+            <h3><a href="#" data-toggle="modal" data-target="#kerala">Hotel 1</a></h3>
+            <!-- <div class="stars">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+            </div> -->
+            <p>0.4 Mile from the Venue</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6">
-          <div class="venue-gallery">
-            <a href="assets/images/venue-gallery/2.jpg" class="venobox" data-gall="venue-gallery">
-              <img src="../assets/images/venue-gallery/2.jpg" alt="" class="img-fluid">
-            </a>
+          <div class="hotel">
+            <div class="hotel-img" data-toggle="modal" data-target="#exampleModalLong">
+              <img src="../assets/images/hotels/2.jpg" alt="Hotel 2" class="img-fluid">
+            </div>
+            <h3><a href="#" data-toggle="modal" data-target="#exampleModalLong">Hotel 2</a></h3>
+            <!-- <div class="stars">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star-half-full"></i>
+            </div> -->
+            <p>0.5 Mile from the Venue</p>
           </div>
         </div>
 
-        <div class="col-lg-4">
-          <div class="venue-gallery">
-            <a href="assets/images/venue-gallery/3.jpg" class="venobox" data-gall="venue-gallery">
-              <img src="../assets/images/venue-gallery/3.jpg" alt="" class="img-fluid">
-            </a>
+        <div class="col-lg-4 col-md-6">
+          <div class="hotel">
+            <div class="hotel-img" data-toggle="modal" data-target="#exampleModalLong">
+              <img src="../assets/images/hotels/3.jpg" alt="Hotel 3" class="img-fluid">
+            </div>
+            <h3><a href="#" data-toggle="modal" data-target="#exampleModalLong">Hotel 3</a></h3>
+            <!-- <div class="stars">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+            </div> -->
+            <p>0.6 Mile from the Venue</p>
           </div>
         </div>
 
@@ -122,6 +147,76 @@ Venue Section
     </div>
 
   </section>
+
+  <!-- Button trigger modal -->
+  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">
+    Launch demo modal
+  </button>
+
+  <!-- Modal Kerala -->
+  <div class="modal fade" id="kerala" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="modal1">Kerala Floods</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p>Time flows by, oscillating between the good and the bad. As we live, God's own country is suffering God's wrath. The beautiful palm-lined beaches, the soul stirring network of canals and the eye-catching mountain slopes lie crying, as Kerala is hit with one of the most destructive floods of recent times. <br>
+            To save God's own country from this unexpected wrath of God, we, as God's own creation, should come forward in this hour of peril and need. For saving millions, we billions must open our arms and uphold the Incredibility of India.
+          </p>
+        </div>
+        <!-- <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div> -->
+      </div>
+    </div>
+  </div>
+
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
 
   <!--==========================
