--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -69,13 +69,38 @@
     transition: 0.5s;
     line-height: 1;
     margin: 10px;
-    color: #fff;
+    color: #f82249;
     -webkit-animation-delay: 0.8s;
     animation-delay: 0.8s;
     border: 2px solid #f82249;
+    background: #0e1735;
 }
 
 #login_inno .about-btn:hover {
+    background: #f82249;
+    color: #fff;
+}
+
+
+#registration_inno .about-btn {
+    font-family: "Raleway", sans-serif;
+    font-weight: 500;
+    font-size: 14px;
+    letter-spacing: 1px;
+    display: inline-block;
+    padding: 12px 32px;
+    border-radius: 50px;
+    transition: 0.5s;
+    line-height: 1;
+    margin: 10px;
+    color: #f82249;
+    -webkit-animation-delay: 0.8s;
+    animation-delay: 0.8s;
+    border: 2px solid #f82249;
+    background: #0e1735;
+}
+
+#registration_inno .about-btn:hover {
     background: #f82249;
     color: #fff;
 }
