--- a/views/login.html
+++ b/views/login.html
@@ -94,7 +94,6 @@
                 <div role="tabpanel" class="col-lg-7 tab-pane fade show active" id="registration" style="background-color: #0e1735;">
                     
                     <form class="form-horizontal" action="" method="post">
-                        <div id="error"></div>
                         <div class="form-group">
                             <label class="control-label col-sm-6" for="Name" style="color:white;">Name:</label>
 
@@ -228,7 +227,7 @@
 
                         <div class="form-group">
                             <div class="col-sm-offset-2 col-sm-12" align="center">
-                                <!--<a href="#about" class="about-btn scrollto">&nbsp;&nbsp; SUBMIT&nbsp;&nbsp;</a> <br>-->
+                                <!-- <a href="#" class="about-btn scrollto signin">&nbsp;&nbsp; SUBMIT&nbsp;&nbsp;</a> <br> -->
                                 <button id="signin" class="about-btn scrollto">&nbsp;&nbsp; SUBMIT&nbsp;&nbsp;</button>
                                 
                                 <!-- <center><button type="submit" class="btn btn-default" style="color:black">Submit</button></center> -->
@@ -353,7 +352,7 @@
                     response = JSON.parse(response)
                     if(response.status=="success")
                     {
-                        console.log(response.result)
+                        // console.log(response.result)
                         for(var i=0; i<response.result.length; i=i+1)
                         {
                             var x = document.getElementById("college");
@@ -375,7 +374,8 @@
             }   
         });
     
-         $('#signin').on('click', function(){
+        $(document).on("click", ".signin", function () {
+         // $('#signin').on('click', function(){
          console.log("Here")      
         var mail=$("#login_email").val();
         var passw=$("#login_password").val();   
@@ -422,7 +422,7 @@
                         else
                         {
                             $("#error").html("<div style=\"color:#ff6666;height:40px;padding : 10px;\"><center><strong>"+response.result+"</center></strong></div>");
-                            console.log(response.result);
+                            // console.log(response.result);
                         }
                    }
                 });
