--- a/views/participants-admin/admin_panel.html
+++ b/views/participants-admin/admin_panel.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../assets/lib/bootstrap/css/bootstrap.min.css">
     <!-- <link rel="stylesheet" href="stylesheets/style.css"> -->
     <script src="../../assets/lib/jquery/jquery.min.js"></script>
 </head>
