--- a/views/event/admin/manage_events.html
+++ b/views/event/admin/manage_events.html
@@ -122,6 +122,10 @@
                         <label for="login_password">Login Password</label>
                         <input type="text" id="loginPassword" name="loginPassword" class="form-control">
                     </div>
+                    <div class="form-group">
+                        <label for="max_limit">Maximum Registration Limit</label>
+                        <input type="number" id="max_limit" name="max_limit" class="form-control">
+                    </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
