--- a/views/ca/admin/ca_individual.html
+++ b/views/ca/admin/ca_individual.html
@@ -9,34 +9,24 @@
         <center>
             <div class="row">
                 <h1 style="display: inline">
-                    <b>Campus Ambassador List</b>
+                    <b>Campus Ambassador</b>
                 </h1>
                 <button style="float: right" class="btn btn-info logout-button" onclick="location.href = 'index.html'">Logout</button>
             </div>
         </center>
     </div>
     
-    <div class="container-fluid" style="background-color: #FFF;border-radius: 2px;box-shadow: 0px 3px 8px rgba(0,0,0,0.25);margin-top: 10vh;">
+    <div class="container" style="background-color: #FFF;border-radius: 2px;box-shadow: 0px 3px 8px rgba(0,0,0,0.25);margin-top: 10vh;">
         <div class="row" style="margin-top: 4em">
         
             <div class="col-md-12">
-                <table class="table table-bordered table-responsive" style="background-color: #3D4C53;color: white;box-shadow: 0px 1px 2px rgba(0,0,0,.2);border-radius: 5px;">
-                    <thead>
-                        <tr>
-                            <th>#</th>
-                            <th>Name</th>
-                            <th>Email</th>
-                            <th>Phone number</th>
-                            <th>College</th>
-                            <th>Selection status</th>
-                            <th>Action</th>
-                            
-                        </tr>
-                    </thead>
-                    <tbody>
-                        
-                    </tbody>
-                </table>
+                <div id="Ca-details"></div>
+                <button  class="btn btn-info" id="accept_ca" style="text-align: center;margin-left: 38vw;"></button>
+                <br>
+                <br>
+                <br>              
+                </div>
+
             </div>
         </div>
     </div>
@@ -46,7 +36,8 @@
 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="../../../assets/lib/sweetalert/sweetalert.js"></script>
-    <script src="../../../assets/js/ajax/fetchingCAResponses.js"></script>
+    <script src="../../../assets/js/ajax/ca_details.js"></script>
+
     
     <script>
         $(document).on("click", ".logout-button", function() {
